--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -23,4 +23,11 @@
         android:name="com.alexvanyo.sportsfeed.ui.CompetitionFragment"
         android:label="@string/app_name"
         tools:layout="@layout/competition_fragment" />
+    <fragment
+        android:id="@+id/mainSettingsFragment"
+        android:name="com.alexvanyo.sportsfeed.ui.MainSettingsFragment"
+        android:label="Settings" />
+    <action
+        android:id="@+id/action_global_mainSettingsFragment"
+        app:destination="@id/mainSettingsFragment" />
 </navigation>
